[gd_scene load_steps=5 format=3 uid="uid://db4xehwv3k6ab"]

[ext_resource type="Script" path="res://UI/Loadgame.gd" id="1_465sv"]
[ext_resource type="FontFile" uid="uid://j71bxuhfo0u7" path="res://Assets/Fonts/data-latin.ttf" id="2_1d7kx"]
[ext_resource type="Script" path="res://UI/GameButton.gd" id="3_uvtvc"]
[ext_resource type="PackedScene" uid="uid://dmn414tgvv43c" path="res://UI/UnitControl.tscn" id="4_3qovm"]

[node name="Loadgame" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_465sv")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.901961)

[node name="Border" type="Control" parent="."]
clip_contents = true
layout_mode = 2
anchors_preset = 0
offset_left = 688.0
offset_right = 1152.0
offset_bottom = 520.0

[node name="ScrollContainer" type="ScrollContainer" parent="Border"]
clip_contents = false
layout_mode = 0
offset_top = 16.0
offset_right = 464.0
offset_bottom = 512.0
horizontal_scroll_mode = 0
vertical_scroll_mode = 2

[node name="Saves" type="GridContainer" parent="Border/ScrollContainer"]
layout_mode = 2

[node name="ColorRect" type="ColorRect" parent="Border"]
custom_minimum_size = Vector2(2.08165e-12, 1)
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -1.0
offset_right = -16.0
grow_horizontal = 2
grow_vertical = 0
color = Color(0.745098, 0.745098, 0.745098, 1)

[node name="BottomPanel" type="GridContainer" parent="."]
custom_minimum_size = Vector2(448, 2.08165e-12)
layout_mode = 2
offset_left = 688.0
offset_top = 528.0
offset_right = 1136.0
offset_bottom = 628.0
metadata/_edit_group_ = true

[node name="GridContainer" type="GridContainer" parent="BottomPanel"]
layout_mode = 2
size_flags_horizontal = 3
columns = 2

[node name="DeleteButton" type="Button" parent="BottomPanel/GridContainer"]
custom_minimum_size = Vector2(0, 48)
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("2_1d7kx")
theme_override_font_sizes/font_size = 24
text = "Delete"
script = ExtResource("3_uvtvc")

[node name="StartButton" type="Button" parent="BottomPanel/GridContainer"]
custom_minimum_size = Vector2(0, 48)
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("2_1d7kx")
theme_override_font_sizes/font_size = 24
text = "Start"
script = ExtResource("3_uvtvc")

[node name="NewGameButton" type="Button" parent="BottomPanel"]
custom_minimum_size = Vector2(0, 48)
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("2_1d7kx")
theme_override_font_sizes/font_size = 24
text = "New Game"
script = ExtResource("3_uvtvc")

[node name="Preview" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 64.0
offset_right = -512.0
grow_horizontal = 2
grow_vertical = 2

[node name="SaveName" type="Label" parent="Preview"]
layout_mode = 0
offset_top = 16.0
offset_right = 240.0
offset_bottom = 64.0
theme_override_fonts/font = ExtResource("2_1d7kx")
theme_override_font_sizes/font_size = 40
text = "save name"
vertical_alignment = 1

[node name="ColorRect2" type="ColorRect" parent="Preview"]
custom_minimum_size = Vector2(2.08165e-12, 1)
layout_mode = 0
offset_top = 72.0
offset_right = 256.0
offset_bottom = 73.0
color = Color(0.745098, 0.745098, 0.745098, 1)

[node name="ChapterLabel" type="Label" parent="Preview"]
layout_mode = 0
offset_top = 496.0
offset_right = 192.0
offset_bottom = 528.0
theme_override_fonts/font = ExtResource("2_1d7kx")
theme_override_font_sizes/font_size = 24
text = "chapter"
vertical_alignment = 1

[node name="LevelLabel" type="Label" parent="Preview"]
layout_mode = 0
offset_top = 528.0
offset_right = 192.0
offset_bottom = 560.0
theme_override_fonts/font = ExtResource("2_1d7kx")
theme_override_font_sizes/font_size = 24
text = "level"
vertical_alignment = 1

[node name="UnitsLabel" type="Label" parent="Preview"]
layout_mode = 0
offset_top = 560.0
offset_right = 192.0
offset_bottom = 592.0
theme_override_fonts/font = ExtResource("2_1d7kx")
theme_override_font_sizes/font_size = 24
text = "UNITS"
vertical_alignment = 1

[node name="TeamList" type="GridContainer" parent="Preview"]
layout_mode = 0
offset_top = 88.0
offset_right = 640.0
offset_bottom = 584.0
scale = Vector2(0.8, 0.8)
theme_override_constants/h_separation = 8
theme_override_constants/v_separation = 8
columns = 3
metadata/_edit_group_ = true

[node name="UnitControl" parent="Preview/TeamList" instance=ExtResource("4_3qovm")]
layout_mode = 2

[node name="UnitControl2" parent="Preview/TeamList" instance=ExtResource("4_3qovm")]
layout_mode = 2

[node name="UnitControl3" parent="Preview/TeamList" instance=ExtResource("4_3qovm")]
layout_mode = 2

[node name="UnitControl4" parent="Preview/TeamList" instance=ExtResource("4_3qovm")]
layout_mode = 2

[node name="UnitControl5" parent="Preview/TeamList" instance=ExtResource("4_3qovm")]
layout_mode = 2

[node name="UnitControl6" parent="Preview/TeamList" instance=ExtResource("4_3qovm")]
layout_mode = 2

[connection signal="pressed" from="BottomPanel/GridContainer/DeleteButton" to="." method="_on_delete_button_pressed"]
[connection signal="pressed" from="BottomPanel/GridContainer/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="BottomPanel/NewGameButton" to="." method="_on_new_game_button_pressed"]
